Added implementation for duchy, province, chapel, bureaucrat, gardens, militia, and bandit; fixed moneylender calculations; clarified instructions on website

--- a/templates/index.html
+++ b/templates/index.html
@@ -1,11 +1,13 @@
 <html>
   <head>
-    <title>Dominion</title>
+    <title>Dominion Money Probability Calculator</title>
   </head>
 
   <body>
     <h1>Dominion Money Probability Calculator</h1>
     <p>Instructions: Enter a deck of the form {"card_type":card_amount,"card_type":card_amount,..."}</p>
+    <p>"card_type": "copper", "silver", "gold", "estate", "duchy", "province", "chapel", "bureaucrat", "gardens", "militia", "moneylender", or "bandit"</p>
+    <p>card_amount: a nonnegative integer<p>
     <p>Example: {"copper":7,"estate":3}</p>
     <form method="POST">
       <input name="deck"/>
