--- a/templates/mpc_m.html
+++ b/templates/mpc_m.html
@@ -1,13 +1,14 @@
 <html>
   <head>
-    <title>Dominion Money Probability Calculator</title>
+    <title>Dominion Tool - Money Probability Calculator - Mathematical</title>
     <link rel="stylesheet" type="text/css" href="{{ url_for('static', filename = 'style.css') }}">
   </head>
 
   <body>
     <h1>Dominion Tool</h1>
-    <button id="button1">Money Probability Calculator</button>
-    <button id="button2">Comparative Strategy Simulator</button>
+    <button id="home">Home</button>  
+    
+    <h2>Money Probability Calculator - Mathematical</h2>
     
     <div id="mpc" class="tabcontent">
       <p>Instructions: Enter a deck of the form {"card_type":card_amount,"card_type":card_amount,..."}</p>
@@ -29,10 +30,9 @@
       {% endif %}
     </div>
 
-    <div id="css" class="tabcontent">
-      <p>Instructions: </p>
-    </div>
-
-    <script type="text/javascript" src="static/scripts.js"></script>
+    <script>
+      document.getElementById("home").addEventListener("click",function(){document.location.href = '/..';})
+    </script>
+    
   </body>
 </html>
