--- a/templates/hpc_m.html
+++ b/templates/hpc_m.html
@@ -12,21 +12,21 @@
     
     <div id="mpc" class="tabcontent">
       <p>Instructions: Enter a deck of the form {"card_type":card_amount,"card_type":card_amount,..."}</p>
-      <p>"card_type": "copper", "silver", "gold", "estate", "duchy", "province", "chapel", "bureaucrat", "gardens", "militia", "moneylender", or "bandit"</p>
+      <p>"card_type": a string in quotes</p>
       <p>card_amount: a nonnegative integer<p>
       <p>Example: {"copper":7,"estate":3}</p>
       <form method="POST">
         <input name="deck"/>
       </form>
 
-      {% if displayImage %}
-        <p>Deck: {{ deck }}</p>
+      {% if display %}
 
-        {% for i in range(money|length) %}
-          <p>${{ money[i] }}: {{ probs[i] }}</p>
+        <p>Deck: {{ deck }}</p>
+        <p>The hands you could draw on your turn, and the probability of each hand:</p>
+        {% for i in range(hands|length) %}
+          <p>{{ hands[i] }}: {{ probs[i] }}</p>
         {% endfor %}
 
-        <img src="{{ url_for('static', filename = filename) }}"/>
       {% endif %}
     </div>
 
