--- a/templates/mpc_m.html
+++ b/templates/mpc_m.html
@@ -21,7 +21,7 @@
 
       {% if displayImage %}
         <p>Deck: {{ deck }}</p>
-
+        <p>The amounts of money you could obtain on your turn, and the probability of each amount:</p>
         {% for i in range(money|length) %}
           <p>${{ money[i] }}: {{ probs[i] }}</p>
         {% endfor %}
