Added implementation for money probability calculator - simulation

--- a/templates/mpc_s.html
+++ b/templates/mpc_s.html
@@ -11,7 +11,7 @@
     
     <div id="mpc" class="tabcontent">
       <p>Instructions: Enter a deck of the form {"card_type":card_amount,"card_type":card_amount,..."}</p>
-      <p>"card_type": "copper", "silver", "gold", "estate", "duchy", "province", "chapel", "bureaucrat", "gardens", "militia", "moneylender", or "bandit"</p>
+      <p>"card_type": "copper", "silver", "gold", "estate", "duchy", "province", "chapel", "bureaucrat", "gardens", "bandit", "village", "festival", "market", or "smithy"</p>
       <p>card_amount: a nonnegative integer<p>
       <p>Example: {"copper":7,"estate":3}</p>
       <form method="POST">
