Added all other simulations to website

--- a/templates/sc_s.html
+++ b/templates/sc_s.html
@@ -12,10 +12,23 @@
     <p>Instructions: Choose a simulation and click run to see who wins!</p>
     <form method="POST">
       <select name="simChoice">
+        <option value="InvVilChapVSFestSmiChap">InvVilChapVSFestSmiChap</option>
+        <option value="InvVilChapVSFestSmithyChap">InvVilChapVSFestSmithyChap</option>
+        <option value="InvVilChapVSMLX">InvVilChapVSMLX</option>
+        <option value="InvVilChapVSSmiBM">InvVilChapVSSmiBM</option>
+        <option value="InvVilChapVSVilLabCouChap">InvVilChapVSVilLabCouChap</option>
+        <option value="InvVilChapVSVilSmiMarChap">InvVilChapVSVilSmiMarChap</option>
+        <option value="InvVilChapVSVilSmiMarChapPriority">InvVilChapVSVilSmiMarChapPriority</option>
+        <option value="InvVilChapVSVilSmiMarChapPriority2">InvVilChapVSVilSmiMarChapPriority2</option>
+        <option value="InvVilChapVSVilWitChap">InvVilChapVSVilWitChap</option>
         <option value="InvVilLabChapVSVilAmb">InvVilLabChapVSVilAmb</option>
-        <option value="InvVilLabChapVSVilAmb">InvVilLabChapVSVilAmb</option>
-        <option value="InvVilLabChapVSVilAmb">InvVilLabChapVSVilAmb</option>
-        <option value="InvVilLabChapVSVilAmb">InvVilLabChapVSVilAmb</option>
+        <option value="MLXVSVilSmiMarChap">MLXVSVilSmiMarChap</option>
+        <option value="SmiBMVSVilSmiMarChap">SmiBMVSVilSmiMarChap</option>
+        <option value="SmithyBMVSMLX">SmithyBMVSMLX</option>
+        <option value="WkspGardenVSVilSmiMarChap">WkspGardenVSVilSmiMarChap</option>
+        <option value="WkspGarVSInvVilChap">WkspGarVSInvVilChap</option>
+        <option value="WkspGarVSMLX">WkspGarVSMLX</option>
+        <option value="WkspGarVSSmiBM">WkspGarVSSmiBM</option>
       </select>
 
       <input type="submit"/>
