deleted excess bot vs bot simulations, decreased number of simulations to 1000, added abbreviation explanations to strategy comparison page

--- a/templates/sc_s.html
+++ b/templates/sc_s.html
@@ -10,22 +10,39 @@
     <h2>Strategy Comparison - Simulation</h2>
   
     <p>Instructions: Choose a simulation and click run to see who wins!</p>
+    <p>Note: Many simulations may take around 10-15 seconds to run.</p>
+    <p>Abbreviations:</p>
+    <ul>
+      <li>Amb - Ambassador</li>
+      <li>BM - Big Money</li>
+      <li>Chap - Chapel</li>
+      <li>Cou - Council Room</li>
+      <li>Fest - Festival</li>
+      <li>Gar - Garden</li>
+      <li>Inv - Inventor</li>
+      <li>Lab - Laboratory</li>
+      <li>Mar - Market</li>
+      <li>MLX - Moneylender X</li>
+      <li>Smi - Smithy</li>
+      <li>Vil - Village</li>
+      <li>VS - Versus</li>
+      <li>Wit - Witch</li>
+      <li>Wksp - Workshop</li>
+    </ul>
+
     <form method="POST">
       <select name="simChoice">
         <option value="InvVilChapVSFestSmiChap">InvVilChapVSFestSmiChap</option>
-        <option value="InvVilChapVSFestSmithyChap">InvVilChapVSFestSmithyChap</option>
         <option value="InvVilChapVSMLX">InvVilChapVSMLX</option>
         <option value="InvVilChapVSSmiBM">InvVilChapVSSmiBM</option>
         <option value="InvVilChapVSVilLabCouChap">InvVilChapVSVilLabCouChap</option>
         <option value="InvVilChapVSVilSmiMarChap">InvVilChapVSVilSmiMarChap</option>
-        <option value="InvVilChapVSVilSmiMarChapPriority">InvVilChapVSVilSmiMarChapPriority</option>
-        <option value="InvVilChapVSVilSmiMarChapPriority2">InvVilChapVSVilSmiMarChapPriority2</option>
         <option value="InvVilChapVSVilWitChap">InvVilChapVSVilWitChap</option>
         <option value="InvVilLabChapVSVilAmb">InvVilLabChapVSVilAmb</option>
         <option value="MLXVSVilSmiMarChap">MLXVSVilSmiMarChap</option>
         <option value="SmiBMVSVilSmiMarChap">SmiBMVSVilSmiMarChap</option>
         <option value="SmithyBMVSMLX">SmithyBMVSMLX</option>
-        <option value="WkspGardenVSVilSmiMarChap">WkspGardenVSVilSmiMarChap</option>
+        <option value="WkspGarVSVilSmiMarChap">WkspGarVSVilSmiMarChap</option>
         <option value="WkspGarVSInvVilChap">WkspGarVSInvVilChap</option>
         <option value="WkspGarVSMLX">WkspGarVSMLX</option>
         <option value="WkspGarVSSmiBM">WkspGarVSSmiBM</option>
