--- a/templates/hpc_m.html
+++ b/templates/hpc_m.html
@@ -1,6 +1,9 @@
 <html>
   <head>
     <title>Dominion Tool - Hand Probability Calculator - Mathematical</title>
+    <style>
+      #home {border: 2px solid black}
+    </style>
   </head>
 
   <body>
