--- a/templates/mpc_s.html
+++ b/templates/mpc_s.html
@@ -1,6 +1,9 @@
 <html>
   <head>
     <title>Dominion Tool - Money Probability Calculator - Simulation</title>
+    <style>
+      #home {border: 2px solid black}
+    </style>
   </head>
 
   <body>
