Increased button font size to 16 px

--- a/templates/home.html
+++ b/templates/home.html
@@ -3,10 +3,10 @@
 <head>
   <title>Dominion Tool</title>
   <style>
-    #mpc-m {border: 2px solid black; background-color: #f44336}
-    #mpc-s {border: 2px solid black; background-color: #FFFF66}
-    #hpc-m {border: 2px solid black; background-color: #008CBA}
-    #sc-s {border: 2px solid black; background-color:	#4CAF50}
+    #mpc-m {font-size: 16px; border: 2px solid black; background-color: #f44336}
+    #mpc-s {font-size: 16px; border: 2px solid black; background-color: #FFFF66}
+    #hpc-m {font-size: 16px; border: 2px solid black; background-color: #008CBA}
+    #sc-s {font-size: 16px; border: 2px solid black; background-color:	#4CAF50}
   </style>
 </head>
 <body>
