--- a/templates/sc_s.html
+++ b/templates/sc_s.html
@@ -2,7 +2,7 @@
   <head>
     <title>Dominion Tool - Strategy Comparison - Simulation</title>
     <style>
-      #home {border: 2px solid black}
+      #home {font-size: 16px; border: 2px solid black}
     </style>
   </head>
 
